# MiEI-UMinho

./: README.md
1Ano/LI1/: README.md
1Ano/LI1/Tanks/docs/: Tarefa0_2018li1g085.html  Tarefa1_2018li1g085.html  Tarefa2_2018li1g085.html  Tarefa3_2018li1g085.html  Tarefa4_2018li1g085.html  Tarefa5_2018li1g085.html  Tarefa6_2018li1g085.html
1Ano/LI1/Tanks/src/: Tarefa0_2018li1g085.hs  Tarefa1_2018li1g085.hs  Tarefa2_2018li1g085.hs  Tarefa3_2018li1g085.hs  Tarefa4_2018li1g085.hs  Tarefa5_2018li1g085.hs  Tarefa6_2018li1g085.hs
1Ano/LI2/: README.md
1Ano/LI2/Reversi/src/: CMakeLists.txt  bot.c  bot.h  estado.c  estado.h  funcsjogo.c  funcsjogo.h  jogo  main.c  saveload.c  saveload.h  tabuleiro.txt
1Ano/PF/Resoluções/: 123.hs  50q.hs  Exame1617.hs  Exame1718.hs  Ficha1.hs  Ficha2.hs  Ficha3.hs  Ficha4.hs  Ficha5.hs  Ficha6.hs  Ficha7.hs  Ficha8.hs  Ficha9.hs  bub.hs  untitled.hs
1Ano/PI/: Ficha6.c
1Ano/PI/Resolucoes/: Ficha1.c  Ficha2.c  Ficha3.c  Ficha4.c  Ficha7.c  Ficha8.c
2Ano/CP/: Fichas.hs  README.md
2Ano/CP/TP/: LTree.hs  _.dot  cp1920t.aux  cp1920t.idx  cp1920t.lhs  cp1920t.tex
2Ano/LI3/: README.md
2Ano/LI3/projC/include/: README.md  UI.h  auxStructs.h  bills.h  branch.h  clients.h  controller.h  fileInfo.h  interface.h  navigator.h  products.h  queries.h  sale.h
2Ano/POO/: README.md
2Ano/POO/db/: logs.csv
2Ano/POO/src/: Conta.java  Controller.ctxt  Controller.java  ControllerLoja.java  ControllerTransportadora.ctxt  ControllerUtilizador.ctxt  ControllerUtilizador.java  ControllerVoluntario.ctxt  ControllerVoluntario.java  Encomenda.ctxt  Encomendas.java  LinhaEncomenda.java  Loja.ctxt  Main.java  Menu.ctxt  Menu.java  Randoms.java  TranspVolunt.ctxt  Transportadora.java  TrazAqui.ctxt  TrazAqui.java  Utilizador.java  Voluntario.ctxt  logs.csv  package.bluej
2Ano/Resolucoes/POO1/: Ficha1.java  package.bluej
2Ano/Resolucoes/POO2/: Pergunta1.ctxt  Testa.java  package.bluej
2Ano/Resolucoes/POO3/: Encomenda.java  Ponto.ctxt
2Ano/Resolucoes/POO4/: Lampada.java  TesteStStr.java  package.bluej
2Ano/SO/: README.md
2Ano/SO/Guiao1/: File.txt  File1.txt  a.out  mycat.c  mycp.c  nl.c  people.c  readln.c
2Ano/SO/Guiao2/: ExAdic.c  Matriz  a.out  fork2.c  fork3.c  fork4.c  fork5.c  fork6.c  fork7.c
2Ano/SO/Guiao3/: a.out  ex3  exec1.c  exec2.c  exec3.c  exec4.c  exec5.c  exec6.c
2Ano/SO/Guiao4/: a.out  dup1.c  dup2.c  dup3.c  dup4.c  saida.txt
2Ano/SO/Guiao5/: a.out  pipes1.c  pipes2.c  pipes3.c  pipes4.c  pipes5.c
2Ano/SO/Guiao7/: a.out  ex1.c  ex2.c  ex3.c  file1.txt  file2.txt  file3.txt  multigrep  signal1.c  signal2.c  signal3.c
3Ano/BD/: README.md
3Ano/BD/TP/: FilmeDB_indices.sql  FilmeDB_povoamento.sql  FilmeDB_queries.sql  FilmeDB_script.sql  FilmeDB_vistas.sql  Modelo_Conceptual.brM3  Modelo_Logico.mwb  Modelo_Logico.mwb.bak  ppBD.pptx  queries.sql
3Ano/CC/: README.md
3Ano/CG/: README.md
3Ano/CG/Aula1/: main.cpp
3Ano/CG/Aula10/: main.cpp
3Ano/CG/Aula11/: main.cpp
3Ano/CG/Aula2/: main.cpp
3Ano/CG/Aula3/: main.cpp
3Ano/CG/Aula4/: main.cpp
3Ano/CG/Aula5/: main.cpp
3Ano/CG/Aula6/: main.cpp
3Ano/CG/Aula8/: catmull-rom.cpp
3Ano/CG/Aula9/: CMakeLists.txt  main.cpp
3Ano/CG/Trabalhos/Fase1/: CMakeLists.txt
3Ano/CG/Trabalhos/Fase1/src/Gerador/: calculaVertices.cpp  calculaVertices.hpp  gerador.cpp
3Ano/CG/Trabalhos/Fase1/src/Motor/: drawFunctions.cpp  motor.cpp
3Ano/CG/Trabalhos/Fase1/src/Utils/: utils.cpp  utils.hpp
3Ano/CG/Trabalhos/Fase3/: CMakeLists.txt
3Ano/CG/Trabalhos/Fase3/AsteroidScript/: SistemaSolar.xml  main.py  novoSS.xml
3Ano/CG/Trabalhos/Fase3/src/Gerador/: gerador.cpp
3Ano/CG/Trabalhos/Fase3/src/Gerador/GeradorUtils/: bezier.cpp  calculaPrimitivas.cpp
3Ano/CG/Trabalhos/Fase3/src/Gerador/GeradorUtils/headers/: bezier.hpp  calculaPrimitivas.hpp
3Ano/CG/Trabalhos/Fase3/src/Motor/: motor.cpp
3Ano/CG/Trabalhos/Fase3/src/Motor/MotorUtils/: drawFunctions.cpp  groupStruct.cpp  transforms.cpp
3Ano/CG/Trabalhos/Fase3/src/Motor/MotorUtils/headers/: catmullrom.hpp  drawFunctions.hpp  groupStruct.hpp  transforms.hpp
3Ano/CG/Trabalhos/Fase3/src/Utils/: matrixAux.cpp  pointFigure.cpp
3Ano/CG/Trabalhos/Fase3/src/Utils/headers/: pointFigure.hpp
3Ano/DSS/: README.md
3Ano/DSS/Fase1/: Gestao-de-Stocks.vpp
3Ano/DSS/Fase2/: G19_TP_Fase2.vpp.bak_000f
3Ano/LI4/: README.md
3Ano/LI4/NewsBook/: LI4-fase2.pptx  LI4_Fase1.pptx
3Ano/MDIO/: README.md
3Ano/MDIO/TP1/: a89589.lp
3Ano/MDIO/TP2/: main.lp
3Ano/MDIO/TP3/: CaminhoCriticoInicial.lp  DiagramaGanttV1.lp  reducoesFuncoesPartes_VFinal.lp
3Ano/MEIO/: README.md
3Ano/MEIO/TP/: TP_Grupo46.xlsm
3Ano/MNOL/: README.md
3Ano/PL/: README.md
3Ano/PL/TP1/: Menu.py  a).py  b).py  c).py  d).py  e).py
3Ano/RC/: README.md
3Ano/RC/TP1-RC/: RC-TP1-PL34-slides.pptx
3Ano/SD/: README.md
3Ano/SRCR/: README.md
4Ano/AA_SIC/: README.md
4Ano/AA_SIC/ProjetoEA/: .gitignore
4Ano/ABD/: README.md
4Ano/ABD/scripts/: dependencias.sh  install_postgres.sh  tpcc-scripts.sh
4Ano/ASCN/: README.md
4Ano/ASMa/: README.md
4Ano/CP/: README.md
4Ano/DAA/: README.md
4Ano/DAA/src/: DAA_TP_PROB1.ipynb  DAA_TP_PROB2.ipynb  novo_test_data.csv  novo_training_data.csv
4Ano/DeeL/: README.md
4Ano/ESR/: README.md
4Ano/MFES/: README.md
4Ano/MFES/TPC2/: TPC2_MFES.ipynb  tab.txt  tab2.txt  tpc2.py
4Ano/MFES/TPC3/: tpc3.als
4Ano/MFES/TPC4/: tpc4.als
4Ano/MFES/TPC5/: tpc5.c
4Ano/RAS/: README.md
4Ano/RAS/RASBet/: .gitignore
4Ano/SA/: README.md
4Ano/SA/Aulas/: Aula2.ipynb  Aula2.py  Aula3.py  logger.txt
TP2/ErrorFiles/: 404.html
TP2/ServerFiles/: ola.txt
TP2/src/: FastFileSrv.java  FileInfo.java  HostInfo.java  HttpGw.java
TP2/src/Exceptions/: ConnectionNotEstablished.java  FragmentationPacketsNotReceived.java  NoServersConnected.java
(+677 files in other folders)
